--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,10 @@ include_directories(include)
 add_executable(chia_plot_sink src/chia_plot_sink.cpp)
 add_executable(chia_plot_copy src/chia_plot_copy.cpp)
 
-target_link_libraries(chia_plot_sink stdc++fs Threads::Threads)
-target_link_libraries(chia_plot_copy stdc++fs)
+if(MSVC)
+	target_link_libraries(chia_plot_sink ws2_32)
+	target_link_libraries(chia_plot_copy ws2_32)
+else()
+	target_link_libraries(chia_plot_sink stdc++fs Threads::Threads)
+	target_link_libraries(chia_plot_copy stdc++fs)
+endif()
