using direct IO on linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ else()
 	find_package(OpenMP REQUIRED)
 endif()
 
-include_directories(include)
+include_directories(include mad-direct-io/include)
 
 add_executable(chia_plot_sink src/chia_plot_sink.cpp)
 add_executable(chia_plot_copy src/chia_plot_copy.cpp)
